[package]
name = "epoch_archive"
version = "0.1.0"
edition = "2024"
description = "Epoch Archive is a simple library for encoding and decoding data that use timestamps (epochs) as the key. Data is encoding with serde and compressed with ZSTD."
license = "MIT"
repository = "https://github.com/Kanro-Code/epoch_archive"
keywords = ["epoch", "archive", "serde", "zstd", "timestamp"]
categories = ["data-structures", "filesystem", "compression"]

[dependencies]
rmp-serde = "1.3.0"
serde = { version = "1.0.218", features = ["derive"] }
thiserror = "2.0.12"
zstd = "0.13.3"

[dev-dependencies]
clippy = "0.0.302"
